--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,10 +5,13 @@
     <string name="result_unknown">unknown result</string>
     <string name="image_uploaded">Image Uploaded, ready to blip</string>
     <string name="error_upload_unknown">Uploading didn\'t work out, unsure why :(</string>
-    <string name="error_upload_network">Uploading didn\'t work out :(.\nCould be a network issue?</string>
+    <string name="error_upload_network">Uploading didn\'t work out :(\nCould be a network issue?</string>
     <string name="error_blipfoto_empty">Blipfoto send an error but without a message.\nStrange!</string>
     <string name="error_blipfoto_unsure">No message after uploading.\nUnsure what\'s going on</string>
     <string name="error_upload_noimage">Could not find image ;(</string>
+    
+        <string name="error_comment_network">Commenting might\'ve gone wrong :(\nCould be a network issue?</string>
+    
     
     <string name="app_name">AndroBlip</string>
     <string name="action_settings">Settings</string>
